--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>graphql-api-demo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
